
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int exit (int) ;
 int fprintf (int ,char*) ;
 int stderr ;

void usage(void)
{
 fprintf(stderr, "mSQLexploit\n\n");
 fprintf(stderr, "  -l\t\tlist available targets.\n");
 fprintf(stderr, "  -t target\ttarget selection.\n");
 fprintf(stderr, " *** MANUAL ATTACK ***\n");
 fprintf(stderr, "  -s [addr]\tsmash address.\n");
 fprintf(stderr, "  -w [addr]\twrite address.\n");
 fprintf(stderr, "  -p [num]\tnumber of pops.\n");
 exit(1);
}
